crates/reinhardt-pages/tests/ui/form/fail/hidden_field_zero_args.stderr
error: expected at least one type argument inside `<...>`
  --> tests/ui/form/fail/hidden_field_zero_args.rs:13:17
   |
13 |             question_id: HiddenField<> {},
   |                          ^^^^^^^^^^^
